exp_results_3/out3.txt
/home/sakakibara/monte-carlo-ray-tracer_approx/source/kdtree/random_recoder_2.cpp: In function ‘node* make_kdtree(std::vector<sample>, int, double (*)[2], double*)’:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/kdtree/random_recoder_2.cpp:59:34: error: ‘make_pair’ was not declared in this scope; did you mean ‘std::make_pair’?
   59 |     std::pair<double, int> mid = make_pair((ranges[axis][0] + ranges[axis][1]) / 2.0, -1);
      |                                  ^~~~~~~~~
      |                                  std::make_pair
In file included from /usr/include/c++/11/bits/stl_algobase.h:64,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/kdtree/random_recoder_2.cpp:1:
/usr/include/c++/11/bits/stl_pair.h:567:5: note: ‘std::make_pair’ declared here
  567 |     make_pair(_T1&& __x, _T2&& __y)
      |     ^~~~~~~~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/kdtree/random_recoder_2.cpp:60:70: error: ‘val_sample’ was not declared in this scope; did you mean ‘sample’?
   60 |     int mid_idx = std::lower_bound(val_idx, val_idx + length, mid) - val_sample;
      |                                                                      ^~~~~~~~~~
      |                                                                      sample
make[2]: *** [CMakeFiles/monte-carlo-ray-tracer.dir/build.make:272: CMakeFiles/monte-carlo-ray-tracer.dir/source/kdtree/random_recoder_2.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/monte-carlo-ray-tracer.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
